force-app/main/default/objects/ABRA_Flexi_Data_Integration_Settings__c/ABRA_Flexi_Data_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds data integration parameters and endpoints.</description>
    <label>ABRA Flexi Data Integration Settings</label>
</CustomObject>