force-app/main/default/objects/ABRA_Flexi_Data_Integration_Settings__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>API name of company on ABRA Flexi server for which data synchronisation is.</description>
    <inlineHelpText>API name of company on ABRA Flexi server for which data synchronisation is.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>