force-app/main/default/objects/ABRA_Flexi_Data_Integration_Settings__c/fields/Integration_Interval_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Integration_Interval_In_Minutes__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Interval between automatic data exports to ABRA Flexi.</description>
    <inlineHelpText>Interval between automatic data exports to ABRA Flexi.</inlineHelpText>
    <label>Integration Interval In Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>