force-app/main/default/objects/ABRA_Flexi_Data_Integration_Settings__c/fields/Invoice_Data_Integration_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Data_Integration_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether Invoice synchronisation is active.</description>
    <inlineHelpText>Determines whether Invoice synchronisation is active.</inlineHelpText>
    <label>Invoice Data Integration Is Active</label>
    <type>Checkbox</type>
</CustomField>