force-app/main/default/objects/ABRA_Flexi_Data_Integration_Settings__c/fields/Order_Data_Integration_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Order_Data_Integration_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether data synchronisation for Order objects is Active.</description>
    <inlineHelpText>Determines whether data synchronisation for Order objects is Active.</inlineHelpText>
    <label>Order Data Integration Is Active</label>
    <type>Checkbox</type>
</CustomField>