force-app/main/default/objects/ABRA_Flexi_Data_Integration_Settings__c/fields/Records_In_One_Batch__c.field-meta.xml
<CustomField>
    <fullName>Records_In_One_Batch__c</fullName>
    <description>Determines the number of records that are exported in one asynchronous request. Maximum number is 200.</description>
    <inlineHelpText>Determines the number of records that are exported in one asynchronous request. Maximum number is 200.</inlineHelpText>
    <label>Records In One Batch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>